# Compass

./: .gitignore  Cargo.toml  DEPLOYMENT.md  Dockerfile  FREE.json  admin.json  admin.json.bak  admin_identity_helper.txt  ai_runner.py  analysis.md  architecture_map.md  betting.json  betting_ledger.json  bob.json  build_check.txt  build_check_2.txt  build_check_bootnodes.txt  build_check_bootnodes_2.txt  build_check_onnx.txt  build_check_onnx_2.txt  build_check_onnx_3.txt  build_err_2.txt  build_log.txt  build_out.txt  build_short.txt  check_final.txt  check_log.txt  check_nfts.ps1  check_output.txt  clean_and_start.ps1  config.mainnet.toml  config.toml  docker-compose.yml  experience_buffer.json  fred.json  fred1.json  genesis.json  george.json  gui_errors.txt  handle_mint_model_nft_FIXED.rs  (+58 more)
compass_db/: 000008.sst  000012.sst  000013.sst  000018.sst  000022.sst  000028.sst  000031.sst  000032.sst  000036.sst  000037.sst  000039.sst  000044.sst  000049.sst  000059.sst  000062.sst  000074.sst  000077.sst  IDENTITY  LOG  LOG.old.1765397921788253  LOG.old.1765398193557409  LOG.old.1765400408670161  LOG.old.1765400557049821  LOG.old.1765401493214250  LOG.old.1765402198636994  LOG.old.1765402417973499  LOG.old.1765402874986981  LOG.old.1765403555699974  LOG.old.1765403921152568  LOG.old.1765404092413537  LOG.old.1765404145456961  LOG.old.1765404369840001  LOG.old.1765404459681852  LOG.old.1765404902590457  LOG.old.1765408153092604  LOG.old.1765408580652356  LOG.old.1765408642934729  LOG.old.1765408748315409  LOG.old.1765408801613237  LOG.old.1765410628442592  (+28 more)
compass_db_1/: IDENTITY  LOG
compass_db_leader/: db  snap.00000000000BD60E  snap.0000000000206C14  snap.0000000000262F4C  snap.00000000003C9C0D  snap.0000000000976F83  snap.0000000000A5FD5A  snap.000000005355853C  snap.000000006C0AD9BB
compass_db_leader/blobs/: 1010407760  1027164478  10289552  1033713706  1056487104  1056487122  1056929020  1056980207  1057102616  1084112144  1084112162  1087354504  11201687  1149393  1155743  12156812  1456429  1557424206  1559032259  (+53 more)
examples/: check_legacy.rs  check_nft_status.rs  clear_nfts.rs  count_nfts.rs  gen_testnet_id.rs  reset_nft_flags.rs  train_enhanced_models.rs
models/: backtest_results.json  btc_scaler.json  btc_v1.onnx.data  eth_scaler.json  eth_v1.onnx.data  ltc_scaler.json  ltc_v1.onnx  ltc_v1.onnx.data  sol_v1.onnx  sol_v1.onnx.data
scripts/: backtest_models.py  build_full.ps1  bundle_onnx.ps1  compass-node.service  deploy_mainnet.sh  generate_real_model.py  install_python311.ps1  train_all_models.ps1  train_btc_agent.py  train_eth_agent.py  train_lstm_signal.py  train_ltc_agent.py  train_multi_timeframe.py  train_sol_agent.py  train_xgboost.py  verify_onnx.py
src/: block.rs  chain.rs  coinmint.rs  config.rs  crypto.rs  encoding.rs  error.rs  genesis.rs  identity.rs  init.rs  interactive.rs  lib.rs  main.rs  market.rs  network.rs  oracle.rs  poh_recorder.rs  storage.rs  trainer.rs  vault.rs  vdf.rs  vm.rs  wallet.rs  worker_menu.rs
web-dashboard/: app.js  index.html  styles.css
(+81 files in other folders)
