[package]
name = "rust_compass"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"
rocksdb = "0.21"

tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["json", "blocking"] }

# ed25519-dalek 1.0.x expects rand 0.7 and rand_core 0.5
ed25519-dalek = "1.0.1"
rand = "0.7"
rand_core = "0.5"

# Hashing + hex
sha2 = "0.9"
hex = "0.4"