[package]
name = "rust_compass"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"
rocksdb = "0.21"
chrono = "0.4"

tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["json", "blocking"] }

# RPC Server
axum = { version = "0.7", features = ["macros"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors"] }

# ed25519-dalek 1.0.x expects rand 0.7 and rand_core 0.5
ed25519-dalek = "1.0.1"
rand = "0.7"
rand_core = "0.5"

# Hashing + hex
sha2 = "0.10"
hex = "0.4"
bip39 = "2.0"
clap = { version = "4.4", features = ["derive"] }

# Encryption
aes-gcm = "0.10"
pbkdf2 = "0.11"
hmac = "0.12"