[package]
name = "rust_compass"
version = "0.1.0"
edition = "2021"
default-run = "rust_compass"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"
libp2p = { version = "0.53", features = ["tcp", "noise", "yamux", "gossipsub", "mdns", "kad", "identify", "request-response", "macros", "tokio"] }
rocksdb = "0.21"
wasmtime = "16.0"
rust_decimal = { version = "1.39.0", features = ["serde-with-float"] }
uuid = { version = "1.4", features = ["v4"] }
half = "=2.3.1"  # Pinned: Required exact version by candle-core 0.7.1
candle-core = "0.7.1"
candle-nn = "0.7.1"
# candle-onnx removed due to protoc dependency
ort = { version = "2.0.0-rc.0", features = ["download-binaries"] }
smartcore = { version = "0.3.2", features = ["serde"] }
ndarray = "0.15"
ndarray-rand = "0.14" # New dependency for network initialization
chrono = "0.4"
async-trait = "0.1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

tokio = { version = "1", features = ["full"] }
lazy_static = "1.4"
reqwest = { version = "0.11", features = ["json", "blocking"] }

# RPC Server
axum = { version = "0.7", features = ["macros"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors"] }

# ed25519-dalek 2.0 uses rand 0.8
ed25519-dalek = { version = "^2.0.0", features = ["rand_core"] }
rand = "^0.8.5"
rand_core = "^0.6.4"

# Hashing + hex
sha2 = "0.10"
hex = "0.4"
bip39 = "2.0"
clap = { version = "4.4", features = ["derive"] }

# Encryption
aes-gcm = "0.10"
pbkdf2 = "0.11"
hmac = "0.12"
wat = "1.243.0"
num-bigint = "0.4.6"
num-traits = "0.2.19"
num-integer = "0.1.46"
sysinfo = "0.37.2"
thiserror = "2.0.17"
toml = "0.9.8"
sled = "0.34.7"
eframe = "0.29"
